		create() datasetに無いカラムを表示しない対策
	demos/variations/*		
		全面見直し
v1.25.0 18-01-14 nittics1991
	grid/encodingjs/*
	grid/lzbase62/*
	grid/moment/*
		外部ライブラリ組み込み
v1.26.0 18-02-01 nittics1991
	grid/skin/variations/images
		format_list_bulleted,menu追加
	grid/skin/variations/skinstyle.css
		menuボタン変更,rowsync追加
	grid/gt_msg_en.js
		rowsync追加
	src/gt-tool.js
		Sigma.Tool.RowSync追加
	src/tool/gtv_row_sync.js
		新規追加
	demo/variations/v1260rowSync.htm
		新規追加
	demo/variations/v1230dragSort.htm
		タイトル修正
	src/gt_grid.js
		endEdit() jquery読込判定修正
v1.26.1 18-02-16 nittics1991
	src/gt-template.js
		formIFrame() HTMLルール修正
			_export_form,textarea,_export_iframe
		createHeaderCell() unselectable属性削除
	src/gt-grid.js	
		initToolbar() unselectable属性削除
	src/gt-tool.js
		Sigma.Button.initialize() inner scriptの空白を%20
		Sigma.MenuItem.initialize() inner scriptの空白を%20
	src/gt-column.js
		freezeCell() freezeRow.id設定削除
v1.26.2 18-02-20 nittics1991
	src/gt-column.js
		freezeCell() freezeRow.id設定が無いと固定列クリックで他列の値が変わる
v1.26.3 18-02-22 nittics1991
	src/tool/gtv_bookmark.js
	src/tool/gtv_grid_inf.js
	src/tool/gtv_skin_inf.js
		lzbase62有で圧縮保存する
	demo/variations/v170localStorage.htm
	demo/variations/v1120bookmark2.htm
	demo/variations/v1190gridConfig2.htm
	demo/variations/v1190skinConfig2.htm
		圧縮保存テスト追加
v1.27.0 18-02-27 nittics1991
	demo/variations/_template
		ソースの読み込み順序をgt_grid_all.jsを解析して同じにした
	demo2/*.html
		demoをVariationsのソースに置き換え
v1.27.1 18-02-27 nittics1991
	demo/example_column_resizable.html
	demo2/example_column_resizable.html
		gridOption2.columnsがcolsOption2で無い為、resizeできた不具合の修正
v1.28.0 18-03-06 nittics1991
	src/gt_grid.js
		render() afterRenderイベント追加
v1.28.1 18-03-30 nittics1991
	src/tool/gtv_bookmark.js
		delFn() 削除時に確認メッセージ表示
	grid/skin/default/skinstyle.css
		gt-menuitem メニューが回り込む対策
	src/tool/gtv_aggregate.js
		viewList() 表示サイズ調整
	demos/variations/v1180csvDownload.htm
		encodingjs読込修正
v1.29.0 18-04-07 nittics1991
	src/gt_grid.js
		createHeader() column.headerStyleでヘッダにclass追加
		
		
		
		