@@ -56,6 +56,17 @@
 	<script type="text/javascript" src="../data/test_data_obj.js"></script>
 	
 <title>v1290customizeHeadStyle</title>
+<style>
+	.header1 {
+		background-color:#ff0000;
+	}
+	.header2 {
+		color:#0000ff !important;
+	}
+	.header3 {
+		background-color:#00ff00;
+	}
+</style>
 </head>
 <body>
 
