@@ -350,7 +350,10 @@ v1.28.1 18-03-30 nittics1991
 v1.29.0 18-04-07 nittics1991
 	src/gt_grid.js
 		createHeader() column.headerStyleでヘッダにclass追加
-		
+		createCustomHeader() 同上
+	demos/variations/v1290headerStyle.htm
+	demos/variations/v1290hecustomizeHeadStyle.htm
+		ファイル新規追加
 		
 		
 		
